Still there is some problem in doAddIternary

--- a/templates/register.html
+++ b/templates/register.html
@@ -119,14 +119,14 @@
   <section class="hero">
     <form action="/doRegister" class="form" method="POST">
       <h2>Register</h2>
-      <p type="Name:"><input type="text" placeholder="Enter your Full Name.." name="full_name" id="full_name"
+      <p type="Name:"><input type="text" placeholder="Enter your Full Name.." name="fullName" id="fullName"
           required></input></p>
       <p type="Email:"><input type="text" placeholder="Enter your Email.." name="email" id="email" required></input></p>
       <p type="Address:"><input type="text" placeholder="Enter your Address.." name="address" id="address"
           required></input></p>
-      <p type="Phone Number:"><input type="number" placeholder="Enter your Contact No.." name="phone_number"
-          id="phone_number" required></input></p>
-      <p type="Password:"><input type="password" placeholder="Enter Password.." name="psw" id="psw" required></input>
+      <p type="Phone Number:"><input type="number" placeholder="Enter your Contact No.." name="cNumber"
+          id="cNumber" required></input></p>
+      <p type="Password:"><input type="password" placeholder="Enter Password.." name="password" id="password" required></input>
       </p>
       <p type="Confirm Password:"><input type="password" placeholder="Confirm Password.." name="psw-repeat"
           id="psw-repeat" required></input></p>
