--- a/templates/addIternary.html
+++ b/templates/addIternary.html
@@ -1,109 +1,187 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+    integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
   <title>Add Iternary</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
 
   <link rel="stylesheet" href="/static/style.css">
-
   <style>
+    html,
     body {
-      background: #59ABE3;
-      margin: 0
+      min-height: 100%;
     }
 
-    .form {
-      width: 600px;
-      height: parent;
-      background: #e6e6e6;
-      border-radius: 8px;
-      box-shadow: 0 0 40px -10px #000;
-      margin: calc(50vh - 220px) auto;
-      padding: 20px 30px;
-      max-width: calc(100vw - 40px);
-      box-sizing: border-box;
-      font-family: 'Montserrat', sans-serif;
-      position: relative
+    body,
+    div,
+    form,
+    input,
+    select,
+    p {
+      padding: 0;
+      margin: 0;
+      outline: none;
+      font-family: Roboto, Arial, sans-serif;
+      font-size: 14px;
+      color: #666;
+      line-height: 22px;
     }
 
-    h2 {
-      margin: 10px 0;
-      padding-bottom: 10px;
-      width: 180px;
-      color: #78788c;
-      border-bottom: 3px solid #78788c
+    h1 {
+      margin: 15px 0;
+      font-weight: 400;
+    }
+
+    .testbox {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: inherit;
+      padding: 3px;
+    }
+
+    form {
+      width: 100%;
+      padding: 20px;
+      background: #fff;
+      box-shadow: 0 2px 5px #ccc;
+    }
+
+    input,
+    select,
+    textarea {
+      margin-bottom: 10px;
+      border: 1px solid #ccc;
+      border-radius: 3px;
     }
 
     input {
+      width: calc(100% - 10px);
+      padding: 5px;
+    }
+
+    select {
       width: 100%;
-      padding: 10px;
-      box-sizing: border-box;
-      background: none;
-      outline: none;
-      resize: none;
-      border: 0;
-      font-family: 'Montserrat', sans-serif;
-      transition: all .3s;
-      border-bottom: 2px solid #bebed2
+      padding: 7px 0;
+      background: transparent;
     }
 
-    input:focus {
-      border-bottom: 2px solid #78788c
+    textarea {
+      width: calc(100% - 6px);
     }
 
-    p:before {
-      content: attr(type);
+    .item {
+      position: relative;
+      margin: 10px 0;
+    }
+
+    .item:hover p,
+    .item:hover i {
+      color: #095484;
+    }
+
+    input:hover,
+    select:hover,
+    textarea:hover,
+    .preferred-metod label:hover input {
+      box-shadow: 0 0 5px 0 #095484;
+    }
+
+    .preferred-metod label {
       display: block;
-      margin: 28px 0 0;
-      font-size: 14px;
-      color: #5a5a5a
+      margin: 5px 0;
+    }
+
+    .preferred-metod:hover input {
+      box-shadow: none;
+    }
+
+    .preferred-metod-item input,
+    .preferred-metod-item span {
+      width: auto;
+      vertical-align: middle;
+    }
+
+    .preferred-metod-item input {
+      margin: 0 5px 0 0;
+    }
+
+    input[type="date"]::-webkit-inner-spin-button {
+      display: none;
+    }
+
+    .item i,
+    input[type="date"]::-webkit-calendar-picker-indicator {
+      position: absolute;
+      font-size: 20px;
+      color: #a9a9a9;
+    }
+
+    .item i {
+      right: 1%;
+      top: 30px;
+      z-index: 1;
+    }
+
+    [type="date"]::-webkit-calendar-picker-indicator {
+      right: 0;
+      z-index: 2;
+      opacity: 0;
+      cursor: pointer;
+    }
+
+    .btn-block {
+      margin-top: 20px;
+      text-align: center;
     }
 
     button {
-      float: right;
-      padding: 8px 12px;
-      margin: 8px 0 0;
-      font-family: 'Montserrat', sans-serif;
-      border: 2px solid #78788c;
-      background: 0;
-      background-color: aliceblue;
-      color: #5a5a6e;
+      width: 150px;
+      padding: 10px;
+      border: none;
+      -webkit-border-radius: 5px;
+      -moz-border-radius: 5px;
+      border-radius: 5px;
+      background-color: #095484;
+      font-size: 16px;
+      color: #fff;
       cursor: pointer;
-      transition: all .3s
     }
 
     button:hover {
-      background: #78788c;
-      color: #fff
+      background-color: #0666a3;
     }
 
-    div {
-      content: 'Hi';
-      position: absolute;
-      bottom: -15px;
-      right: -20px;
-      background: #50505a;
-      color: #fff;
-      width: 320px;
-      padding: 16px 4px 16px 0;
-      border-radius: 6px;
-      font-size: 13px;
-      box-shadow: 10px 10px 40px -14px #000
-    }
+    @media (min-width: 568px) {
 
-    span {
-      margin: 0 5px 0 15px
+      .name-item,
+      .city-item {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+      }
+
+      .name-item input,
+      .city-item input {
+        width: calc(50% - 20px);
+      }
+
+      .city-item select {
+        width: calc(50% - 8px);
+      }
     }
   </style>
 </head>
 
 <body>
+
+
   <header>
     <h2 href="#"> Trek Travel</h2>
     <nav>
@@ -121,59 +199,85 @@
 
     </nav>
   </header>
- 
+
   <section class="hero">
-    <form action="/doAddIternary" class="form" method="POST">
-      <h2>Add Iternaries</h2>
-      <br>
-      <p id="iternaries"> </p>
-      <br>
-      <label for="title"><b>Trek Destination</b></label>
-      <select onchange="getIternaries()" name="trek_destination_id" id="trek_destination_id" required>
-        <option value="0">Select an option..</option>
-        {% for row in result['treks'] %}
-        <option value="{{row[0]}}">{{row[1]}}</option>
-        {% endfor %}
-      </select>
-     
-      <p type="Title:"><input type="text" placeholder="Enter Title.." name="title" id="title" required></input></p>
-      <p type="Days:"><input type="number" placeholder="Enter Days.." name="days" id="days" required></input></p>
-      <p type="Start Place:"><input type="text" placeholder="Enter Start Place.." name="startPlace" id="startPlace"
-          required></input></p>
-      <p type="End Place:"><input type="text" placeholder="Enter End Place.." name="endPlace" id="endPlace"
-          required></input></p>
-      <p type="Description">
-        <textarea type="text" placeholder="Enter Description.." name="description" id="description" required=""
-          style="width: 542px; height: 103px;"></textarea>
-      </p>
-      <p type="Duration:"><input type="text" placeholder="Enter Duration.." name="duration" id="duration"
-          required></input></p>
-      <p type="Total Cost:"><input type="number" placeholder="Enter Cost.." name="cost" id="cost" required></input></p>
 
+    <div class="testbox">
+      <form action="/doAddIternary" class="form" method="POST">
 
-      <button>Add Iternary</button>
-
+        <h1>Add Iternaries</h1>
+        <label for="title"><b>Trek Destination</b></label>
+        <select onchange="getIternaries()" name="trekId" id="trekId" required>
+          <option value="0">Select an option..</option>
+          {% for row in result['treks'] %}
+          <option value="{{row[0]}}">{{row[1]}}</option>
+          {% endfor %}
+        </select>
+        <div id="iternaries"></div>
+        <div class="item">
+          <p>Title</p>
+          <div class="name-item">
+            <input type="text" name="title" placeholder="" id="title"/>
+          </div>
+        </div>
+        <div class="item">
+          <p>Day</p>
+          <div class="name-item">
+            <input type="text" name="days" placeholder="" id="days"/>
+          </div>
+        </div>
+        <div class="item">
+          <p>Start Place</p>
+          <div class="name-item">
+            <input type="text" name="startPlace" placeholder="" id="startPlace"/>
+          </div>
+        </div>
+        <div class="item">
+          <p>End Place</p>
+          <div class="name-item">
+            <input type="text" name="endPlace" placeholder="" id="endPlace"/>
+          </div>
+        </div>
+        <p>Description</p>
+        <textarea rows="5" id="description"></textarea>
+        <div class="item">
+          <p>Duration</p>
+          <div class="name-item">
+            <input type="text" name="duration" placeholder="" id="duration"/>
+          </div>
+        </div>
+        <div class="item">
+          <p>Cost</p>
+          <div class="name-item">
+            <input type="text" name="cost" placeholder="" id="cost" />
+          </div>
+        </div>
+    </div>
+    <div class="btn-block">
+      <button type="submit" href="/">Add Iternary</button>
+    </div>
     </form>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-
-    <script>
-      function getIternaries() {
-        var trekId = document.getElementById("trek_destination_id").value;
-        // document.getElementById("view_iternaries_link").href="/iternary/"+val;
-        $.ajax('/iternary/' + trekId,
-          {
-            success: function (data, status, xhr) {
-              $('#iternaries').html(data);
-            }
-          });
-      }
-
-
-
-
-    </script>
+    </div>
   </section>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+  <script>
+    function getIternaries() {
+      var trekId = document.getElementById("trek_destination_id").value;
+      // document.getElementById("view_iternaries_link").href="/iternary/"+val;
+      $.ajax('/iternary/' + trekId,
+        {
+          success: function (data, status, xhr) {
+            $('#iternaries').html(data);
+          }
+        });
+    }
+
+
+
+
+  </script>
 </body>
 
 </html>
