--- a/templates/trek.html
+++ b/templates/trek.html
@@ -129,6 +129,7 @@
       font-size: 1em;
       text-transform: uppercase;
       margin: 0.2em auto;
+      color: Grey;
     }
 
     .item,
@@ -139,7 +140,7 @@
     }
 
     .price {
-      color: Grey;
+      color: rgb(8, 8, 8);
     }
 
     .description,
@@ -362,7 +363,11 @@
   </header>
 
   <section class="hero">
-    <div class="listing-section">
+    <div>
+      <button id="mytrek">My Treks</button>
+      <button id="alltrek">All Treks</button>
+    </div>
+    <div class="listing-section" id="prod_listing">
       {% for row in result['trek'] %}
       <div class="product">
         <a href="/trek/{{row.0}}">
@@ -370,19 +375,45 @@
             <div class="images" id="image-1"></div>
           </div>
           <div class="text-box">
-            <h2 class="item">{{ row.o }}</h2>
+            <h2 class="item">{{ row.0 }}</h2>
             <h3 class="price">Days: {{ row.2 }}</h3>
 
             <h4 class="price">Total Cost: {{ row.4 }}</h4>
             <p class="description">{{ row.1 }} - {{ row.3 }}</p>
             <h5 class="price">Upvotes: {{ row.5 }}</h5>
             <button type="button" name="item-1-button" id="item-1-button">{{ row.6 }}</button>
+            {% if result["userId"]==row.7 %}
+            <a href="/editTrek/{{row.0}}">Edit</a>
+            <a onclick="return confirm('Are you sure You want to delete this?')"
+              href="/doDeleteTrek/{{row.0}}">Delete</a>
+            {% endif %}
           </div>
         </a>
       </div>
       {% endfor %}
     </div>
   </section>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script type="text/javascript">
+    $('#mytrek').click(function () {
+      $.ajax('/myTreks/' + 'user',
+        {
+          success: function (data, status, xhr) {
+            $('#prod_listing').html(data);
+          }
+        });
+    });
+
+    $('#alltrek').click(function () {
+      $.ajax('/myTreks/' + 'all',
+        {
+          success: function (data, status, xhr) {
+            $('#prod_listing').html(data);
+          }
+        });
+    });
+  </script>
 </body>
 
 </html>
